fix: hid overflow on the X axies. note: this might cause problems down the line - not sure

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,8 @@ body {
 
 	padding: 2rem;
 
+	overflow-x: hidden;
+
 	h1 {
 		font-size: 3rem;
 	}
